| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8204808 | 11.0.1 | David Holmes | P3 | Resolved | Fixed | team |
# after -XX: or in .hotspotrc: SuppressErrorAt=/exceptions.cpp:484
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/cf88bcc3-69c5-4720-92b9-df6e59171b59/workspace/open/src/hotspot/share/utilities/exceptions.cpp:484), pid=43032, tid=11
# fatal error: ExceptionMark constructor expects no pending exceptions
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-2018-03-20-0603290.vm-sqe-notificationswwgrp.pit180315)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-2018-03-20-0603290.vm-sqe-notificationswwgrp.pit180315, compiled mode, tiered, compressed oops, g1 gc, solaris-sparc)
# Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/87b54363-625e-48c3-974e-406a876fcc2d/testoutput/jtreg/JTwork/scratch/0/core or core.43032
#
# An error report file with more information is saved as:
# /scratch/opt/mach5/mesos/work_dir/87b54363-625e-48c3-974e-406a876fcc2d/testoutput/jtreg/JTwork/scratch/0/hs_err_pid43032.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
- backported by
-
JDK-8204808 compiler/uncommontrap/TestDeoptOOM.java failed w/ fatal error: ExceptionMark constructor expects no pending exceptions
-
- Resolved
-
- relates to
-
JDK-8154589 assert(k != NULL) failed: preloaded klass not initialized
-
- Resolved
-
-
JDK-8198826 -XX:+VerifyStack fails with fatal error: ExceptionMark constructor expects no pending exceptions
-
- Resolved
-
-
JDK-5086470 Add support for java.util.concurrent locks in the lock related facility
-
- Resolved
-
-
JDK-8202359 [GRAAL] compiler/uncommontrap/TestDeoptOOM.java failed with OutOfMemoryError
-
- Resolved
-
-
JDK-8205699 assert(_owner_offset != 0) failed in javaClasses.cpp
-
- Resolved
-