src/hotspot/share/runtime/vm_operations.hpp
@@ -421,7 +421,6 @@ class VM_FindDeadlocks: public VM_Operation {
   DeadlockCycle* result()      { return _deadlocks; };
   VMOp_Type type() const       { return VMOp_FindDeadlocks; }
   void doit();
-  bool doit_prologue();
 };
 
 class ThreadDumpResult;
